--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
 }
 
 .logo {
-  font-family: Ari, cursive;
+  font-family: 'Courier New', Courier, ;
   font-size: 72px;
   color: #fff;
   text-align: center;
