--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@ background-image: linear-gradient(315deg, #f3b8c6 0%, #9795ef 74%);
 
 h2 {
   font-size: 34px;
-  font-weight: 500;
+  font-weight: 400;
   margin: 0 10px 10px 10px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif
 }
 
 h3 {
-  font-size: 22px;
-  font-weight: 550;
+  font-size: 18px;
+  font-weight: 554000;
 }
 
 p {
@@ -78,36 +78,45 @@ main img {
 
 header {
   background-color: #89d4cf;
-background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
-
+  background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
   padding: 20px 20px 0 20px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
+
+header div{
+  display: flex;
+ 
+}
+
+
 
 .logo {
-  font-family: 'Courier New', Courier, ;
-  font-size: 72px;
+  font-family: "Pangolin", cursive;
+  font-size: 20vmin;
   color: #fff;
-  text-align: center;
+  
 }
 
-header nav {
+header nav ul{
   display: flex;
+  padding-left: 0;
   justify-content: center;
-}
-
-header nav ul {
-  display: flex;
-  justify-content: center;
+  
 }
 
 header nav ul li {
   list-style-type: none;
 }
 
+header nav ul li:last-child a{
+  padding-right: 0;
+}
+
 header nav ul li a {
   color: #fff;
-  font-size: 20px;
   text-decoration: none;
   padding: 0 20px 0 0;
 }
@@ -166,19 +175,19 @@ footer p {
 /* Desktop Header */
   header {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    padding: 0 30px;
+    flex-direction: row;
+    align-content: center;
   }
 
   .logo {
-    margin: 14px 0;
-    padding-top: 0;
+    font-size:40px;
   }
 
-  header nav {
-    margin-top: 30px;
-  }
+  header nav{
+    align-items: center;
+    padding-top: 6px;
+   }
 
 /* Desktop Form */
   .desktop-form-group {
